Version 0.29.0 (released ?? Sep 2003, revision ????)
http://svn.collab.net/repos/svn/tags/0.28.0

 User-visible changes:
 * ???

 Developer-visible changes:
 * GUI developers take note: prompting API changed (r6928, issue #1214)


Version 0.28.2 (released 29 Aug 2003, revision 6946)
http://svn.collab.net/repos/svn/tags/0.28.2

 User-visible changes:
 * MAJOR BUGFIX:  revert revision 6764.

      The new history-searching code was over-stressing our use
      of BerkeleyDB transactions, causing checkouts to go
      twice as slow and lose all concurrent-client scalability.

      This is a temporary fix for a larger design problem.  See issue
      http://subversion.tigris.org/issues/show_bug.cgi?id=1499

Version 0.28.1
(released 28 Aug 2003,http://svn.collab.net/repos/svn/tags/0.28.1)

  There are no changes in this release.
  It is strictly an updated release, build with the correct version
  of autoconf; autconf-2.57

Version 0.28.0 (released 27 August 2003, rev 6894, branches/release-0.28)
(http://svn.collab.net/repos/svn/tags/0.28)

#####################################################################
##  WARNING  WARNING  WARNING  WARNING  WARNING  WARNING  WARNING  ##
#####################################################################
##                                                                 ##
##  This release makes an incompatible change to the Subversion    ##
##  repository filesystem schema.  Repositories created with       ##
##  Subversion code prior to this release will unable to operate   ##
##  with this new code.  To maintain the ability to use said       ##
##  repositories, you must use a version 'svnadmin dump' prior to  ##
##  this change to dump your repository to a dumpfile, then use    ##
##  this new Subversion code to create, and load your dumpfile     ##
##  a new repository using 'svnadmin load'.  And don't forget to   ##
##  copy over any custom configuration/hooks from the old to the   ##